# prequel

./: .clang-format  CMakeLists.txt  Design.txt  LICENSE  Readme.rst  TODO.rst  TODO.txt  azure-pipelines.yml
bench/btree/: CMakeLists.txt  main.cpp
doc/: CMakeLists.txt  Doxyfile.in  btree.rst  conf.py  datastructures.rst  engine.rst  exceptions.rst  file_io.rst  heap.rst  index.rst  list.rst  serialization.rst  stack.rst  stream.rst  utility.rst  vfs.rst
doc/doxyrest/frame/: c_utils.lua
example/: CMakeLists.txt
example/block-fs/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  format.cpp  main.cpp
example/btree-bench/: CMakeLists.txt  main.cpp
example/fs/: CMakeLists.txt  main.cpp
example/graph/: CMakeLists.txt  main.cpp
example/keyvalue-db/: CMakeLists.txt  database.cpp  database.hpp  fixed_string.hpp  main.cpp
example/object-db/: CMakeLists.txt  main.cpp
example/serialization/: CMakeLists.txt  main.cpp
extpp/: CMakeLists.txt  address.cpp  address.hpp  allocator.hpp  anchor_ptr.hpp  assert.cpp  assert.hpp  bin.hpp  block.hpp  block_allocator.hpp  block_handle.hpp  block_index.hpp  btree.hpp  btree_map.hpp  btree_set.hpp  default_allocator.hpp  default_file_format.hpp  defs.hpp  engine.cpp  engine.hpp  exception.cpp  exception.hpp  extent.cpp  extent.hpp  file_engine.hpp  handle.hpp  heap.hpp  id_generator.hpp  io.cpp  io.hpp  io_unix.cpp  io_win32.cpp  list.hpp  log.hpp  map.hpp  math.hpp  mmap_engine.cpp  mmap_engine.hpp  new_address.hpp  node_allocator.cpp  (+11 more)
extpp/btree/: base.hpp  iterator.hpp  node.hpp  safe_iterator.hpp  state.hpp  verify.hpp
extpp/detail/: bitset.hpp  empty.hpp  fix.hpp  free_list.cpp  free_list.hpp  inlined_any.hpp  iter_tools.hpp  memory.hpp  operators.hpp  rollback.hpp  safe_iterator.hpp  sequence_insert.hpp  wal.hpp
extpp/heap/: free_space.hpp  gc.hpp  object_access.hpp  object_table.hpp  segregated_free_list.hpp  storage.hpp  type_set.hpp
extpp_old/: CMakeLists.txt  address.hpp  allocator.hpp  anchor_ptr.hpp  binary_format.hpp  block.hpp  block_index.hpp  btree.hpp  default_file_format.hpp  engine.hpp  exception.cpp  extent.hpp  file_engine.cpp  heap.hpp  id_generator.hpp  identity_key.hpp  io.hpp  list.hpp  math.hpp  mmap_engine.cpp  mmap_engine.hpp  serialization.hpp  set.hpp  stream.hpp
extpp_old/btree/: iterator.hpp  node.hpp  safe_iterator.hpp  state.hpp  verify.hpp
extpp_old/detail/: bitset.hpp  operators.hpp
extpp_old/heap/: base.hpp
include/extpp/: address.hpp  allocator.hpp  anchor_handle.hpp  assert.hpp  binary_format.hpp  block_index.hpp  btree.hpp  default_allocator.hpp  default_file_format.hpp  defs.hpp  engine.hpp  exception.hpp  extent.hpp  file_engine.hpp  formatting.hpp  handle.hpp  heap.hpp  id_generator.hpp  list.hpp  mmap_engine.hpp  node_allocator.hpp  raw_btree.hpp  raw_list.hpp  raw_stack.hpp  raw_stream.hpp  region_allocator.hpp  vfs.hpp  (+4 more)
src/: CMakeLists.txt  block_index.cpp  default_allocator.cpp  engine.cpp  exception.cpp  extent.cpp  file_engine.cpp  hash.cpp  heap.cpp  id_generator.cpp  memory_engine.cpp  mmap_engine.cpp  node_allocator.cpp  raw_array.cpp  raw_btree.cpp  raw_hash_table.cpp  raw_list.cpp  raw_stack.cpp  transaction_engine.cpp  vfs.cpp  vfs_unix.cpp  vfs_win32.cpp
src/btree/: base.hpp  cursor.hpp  internal_node.hpp  internal_node.ipp  leaf_node.hpp  leaf_node.ipp  loader.hpp  tree.hpp
src/container/: array.cpp  btree.cpp  default_allocator.cpp  hash_table.cpp  list.cpp  stack.cpp
src/container/btree/: cursor.hpp  cursor.ipp  internal_node.hpp  internal_node.ipp  leaf_node.hpp  leaf_node.ipp  loader.hpp  loader.ipp  tree.hpp  tree.ipp
src/detail/: free_list.cpp
src/engine/: base.hpp  block.hpp  block.ipp  block_cache.hpp  block_dirty_set.hpp  block_map.hpp  block_pool.hpp  engine_base.hpp  engine_base.ipp  file_engine.hpp  file_engine.ipp  journal.hpp  journal.ipp  transaction_engine.hpp  transaction_engine.ipp
src/extpp/: CMakeLists.txt  address.cpp  assert.cpp  block_index.cpp  default_allocator.cpp  exception.cpp  extent.cpp  file_engine.cpp  formatting.cpp  heap.cpp  heap_base.hpp  id_generator.cpp  io.cpp  io_unix.cpp  io_win32.cpp  mmap_engine.cpp  node_allocator.cpp  raw_btree.cpp  raw_btree_internal_node.hpp  raw_btree_leaf_node.hpp  raw_list.cpp  raw_stack.cpp  raw_stream.cpp  region_allocator.cpp  vfs.cpp  vfs_unix.cpp  vfs_win32.cpp
src/extpp/btree/: base.hpp  cursor.hpp  cursor.ipp  internal_node.hpp  internal_node.ipp  leaf_node.hpp  leaf_node.ipp  loader.hpp  loader.ipp  tree.hpp  tree.ipp
src/extpp/detail/: free_list.cpp
src/extpp/heap/: base.hpp  object_table.hpp  storage.hpp
src/prequel/: CMakeLists.txt  address.cpp  assert.cpp  block_index.cpp  default_allocator.cpp  engine.cpp  exception.cpp  extent.cpp  file_engine.cpp  formatting.cpp  hash.cpp  heap.cpp  id_generator.cpp  memory_engine.cpp  mmap_engine.cpp  node_allocator.cpp  raw_array.cpp  raw_btree.cpp  raw_hash_table.cpp  raw_list.cpp  raw_stack.cpp  raw_stream.cpp  simple_file_format.cpp  vfs.cpp  vfs_unix.cpp  vfs_win32.cpp
src/prequel/btree/: cursor.hpp  cursor.ipp  internal_node.hpp  internal_node.ipp  leaf_node.hpp  leaf_node.ipp  loader.hpp  loader.ipp  tree.hpp  tree.ipp
src/prequel/detail/: free_list.cpp
test/: CMakeLists.txt  address_test.cpp  anchor_ptr_test.cpp  array_test.cpp  bin_test.cpp  bitset_test.cpp  block_allocator_test.cpp  block_engine_test.cpp  block_test.cpp  btree_test.cpp  default_allocator_test.cpp  extent_test.cpp  fixed_string_test.cpp  free_list_test.cpp  freelist_test.cpp  handle_test.cpp  hash_table_test.cpp  heap_test.cpp  id_generator.cpp  id_generator_test.cpp  inlined_any_test.cpp  io_test.cpp  iter_tools_test.cpp  list_test.cpp  math_test.cpp  memory_test.cpp  mmap_engine_test.cpp  new_address_test.cpp  node_allocator_test.cpp  region_allocator.cpp  serialization_test.cpp  stack_test.cpp  stream_test.cpp  test_file.hpp  transaction_engine_test.cpp
test_old/: address_test.cpp  block_test.cpp  extent_test.cpp  heap_test.cpp  inlined_any_test.cpp  mmap_engine_test.cpp  new_address_test.cpp  stack_test.cpp  test_file.hpp
utils/: format-all
(+79 files in other folders)
